AIOEC-2033: Disabled tooltips on mobile devices, fixed hiding of tooltips on desktops, removed unnecessary tooltips, tidied styling of dropdowns

--- a/public/themes-ai1ec/vortex/less/event.less
+++ b/public/themes-ai1ec/vortex/less/event.less
@@ -140,9 +140,6 @@
 		.ai1ec-fa-fw {
 			width: 20px;
 		}
-		.ai1ec-btn-dropdown {
-			overflow: hidden;
-		}
 	}
 }
 
